Skickar in senaste med Grafer

--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -277,7 +277,7 @@
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-chart-area mr-1"></i>
-                                Orders by Month
+                                Revenue/Month (SEK)
                             </div>
                             <div class="card-body">
                                 <canvas id="myAreaChart" width="100%" height="40"></canvas>
@@ -288,7 +288,7 @@
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-chart-bar mr-1"></i>
-                                Recent Orders
+                                Total amount of Orders/Month
                             </div>
                             <div class="card-body">
                                 <canvas id="myBarChart" width="100%" height="40"></canvas>
@@ -300,22 +300,22 @@
                     <div class="col-xl-6">
                         <div class="card mb-4">
                             <div class="card-header">
-                                <i class="fas fa-chart-area mr-1"></i>
-                                Orders by Month
+                                <i class="fas fa-chart-bar mr-1"></i>
+                                Top Revenue generating Users
                             </div>
                             <div class="card-body">
-                                <canvas id="myAreaChart" width="100%" height="40"></canvas>
+                                <canvas id="revenueByUser" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
                         <div class="card mb-4">
                             <div class="card-header">
-                                <i class="fas fa-chart-bar mr-1"></i>
-                                Recent Orders
+                                <i class="fas fa-chart-area mr-1"></i>
+                                Product Reviews by Stars
                             </div>
                             <div class="card-body">
-                                <canvas id="myBarChart" width="100%" height="40"></canvas>
+                                <canvas id="myPieChart" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
