--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -350,13 +350,15 @@
                         <div class="form-group row">
                             <label for="userId" class="col-4 col-form-label">Old password</label>
                             <div class="col-8">
-                                <input id="password_user_password" name="oldpassword" type="password" class="form-control">
+                                <input id="password_user_password" name="oldpassword" type="password"
+                                       class="form-control">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="password_newpassword" class="col-4 col-form-label">New password</label>
                             <div class="col-8">
-                                <input id="password_newpassword" name="newpassword" type="password" class="form-control">
+                                <input id="password_newpassword" name="newpassword" type="password"
+                                       class="form-control">
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -372,8 +374,8 @@
             <script src="/js/Admin/scripts.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
                     crossorigin="anonymous"></script>
-            <script src="/js/Admin/chart-area-demo.js"></script>
-            <script src="/js/Admin/chart-bar-demo.js"></script>
+            <script src="/js/User/chart-area-user.js"></script>
+            <script src="/js/User/chart-bar-user.js"></script>
             <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
                     crossorigin="anonymous"></script>
             <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
