--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -113,21 +113,21 @@
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-chart-bar mr-1"></i>
-                                User orders
+                                Grand Total / Latest orders
                             </div>
                             <div class="card-body">
-                                <canvas id="myBarChart" width="100%" height="40"></canvas>
+                                <canvas id="UserReviewsChart" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
                         <div class="card mb-4">
                             <div class="card-header">
-                                <i class="fas fa-chart-area mr-1"></i>
-                                User spending
+                                <i class="fas fa-chart-pie mr-1"></i>
+                                Product Ratings
                             </div>
                             <div class="card-body">
-                                <canvas id="myAreaChart" width="100%" height="40"></canvas>
+                                <canvas id="myPieChartReview" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
@@ -343,21 +343,21 @@
                         <div class="form-group row" style="display:none;">
                             <label for="userId" class="col-4 col-form-label">username</label>
                             <div class="col-8">
-                                <input id="password_userId" name="username" type="password" class="form-control">
+                                <input id="password_userId" name="username" type="text" class="form-control" autocomplete="username">
                             </div>
                         </div>
 
                         <div class="form-group row">
                             <label for="userId" class="col-4 col-form-label">Old password</label>
                             <div class="col-8">
-                                <input id="password_user_password" name="oldpassword" type="password"
+                                <input id="password_user_password" name="oldpassword" type="password" autocomplete="current-password"
                                        class="form-control">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="password_newpassword" class="col-4 col-form-label">New password</label>
                             <div class="col-8">
-                                <input id="password_newpassword" name="newpassword" type="password"
+                                <input id="password_newpassword" name="newpassword" type="password" autocomplete="new-password"
                                        class="form-control">
                             </div>
                         </div>
