--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -221,8 +221,11 @@
                     <div class="form-group row">
                         <label for="type" class="col-4 col-form-label">Type</label>
                         <div class="col-8">
-                            <input id="type" name="type" type="text" class="form-control">
-                        </div>
+ <select class="form-control" name="categoryId">
+                                                                        <option value="1">Background</option>
+                                                                        <option value="2">Stockphoto</option>
+                                                                        <option value="3">Poster</option>
+                                                                    </select>                        </div>
                     </div>
                     <div class="form-group row">
                         <label for="price" class="col-4 col-form-label">Price</label>
@@ -233,9 +236,13 @@
                     <div class="form-group row">
                         <label for="discount" class="col-4 col-form-label">Discount</label>
                         <div class="col-8">
-                            <input id="discount" name="discount" type="text" class="form-control">
-                        </div>
-                    </div>
+ <select class="form-control" name="discount">
+                                                                        <option value="0"></option>
+                                                                        <option value="0.1">10%</option>
+                                                                        <option value="0.25">25%</option>
+                                                                        <option value="0.5">50%</option>
+                                                                    </select>                        </div>
+                    </div>                                                                   
                     <div class="form-group row">
                         <label for="date" class="col-4 col-form-label">Published at</label>
                         <div class="col-8">
