--- a/src/main/resources/templates/Frontend/Main/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/Main/Checkout.mustache
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -321,11 +322,10 @@
 
                                             <ul class="list-group list-group-flush">
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                                    Temporary amount (ex-moms)
-                                                    <span>{{orderData.subTotal}}</span>
+                                                     Gross price <span>{{orderData.subTotal}}</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                                    Moms
+                                                    VAT
                                                     <span>{{orderData.tax}}</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
@@ -341,10 +341,8 @@
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                                     <div>
-                                                        <strong>The total amount of</strong>
-                                                        <strong>
-                                                            <p class="mb-0">(including VAT)</p>
-                                                        </strong>
+                                                        <strong>Total</strong>
+                                                      
                                                     </div>
                                                     <span><strong id="grandTotal">{{orderData.total}}</strong></span>
                                                 </li>
@@ -564,6 +562,8 @@
 
 
     }
+
+    
 
 
 </script>
