--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -147,11 +147,11 @@
 
                                             <ul class="list-group list-group-flush">
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                                    Temporary amount (ex-moms)
+                                                    Gross price
                                                     <span>{{orderData.subTotal}}</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                                    Moms
+                                                    VAT
                                                     <span>{{orderData.tax}}</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
@@ -167,10 +167,8 @@
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                                     <div>
-                                                        <strong>The total amount of</strong>
-                                                        <strong>
-                                                            <p class="mb-0">(including VAT)</p>
-                                                        </strong>
+                                                        <strong>Total</strong>
+                                                    
                                                     </div>
                                                     <span><strong id="grandTotal">{{orderData.total}}</strong></span>
                                                 </li>
@@ -395,6 +393,8 @@
                 </form>
             </div>
 
+</div>
+</div>
 </div>
 <script src="/js/Admin/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
