--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -395,14 +395,14 @@
                         <div class="form-group row" style="display:none;">
                             <label for="userId" class="col-4 col-form-label">username</label>
                             <div class="col-8">
-                                <input id="userId" name="username" type="password" class="form-control">
+                                <input id="userId" name="username" type="password" class="form-control" value="{{userData.email}}>
                             </div>
                         </div>
 
                         <div class="form-group row">
                             <label for="userId" class="col-4 col-form-label">Old password</label>
                             <div class="col-8">
-                                <input id="userId" name="oldpassword" type="password" class="form-control">
+                                <input id="userbajs" name="oldpassword" type="password" class="form-control">
                             </div>
                         </div>
                         <div class="form-group row">
