--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -337,7 +337,7 @@
                     <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
-                            <input id="userId" name="username" type="password" class="form-control">
+                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}>
                         </div>
                     </div>
 
