--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -343,7 +343,7 @@
                         <div class="form-group row" style="display:none;">
                             <label for="userId" class="col-4 col-form-label">username</label>
                             <div class="col-8">
-                                <input id="password_userId" name="username" type="text" class="form-control" autocomplete="username">
+                                <input id="password_userId" name="username" type="text" class="form-control" autocomplete="username" value="{{userData.email}}">
                             </div>
                         </div>
 
