--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -150,10 +150,10 @@
                         <div class="card">
                             <div class="card-header">
                                 <i class="fas fa-chart-bar mr-1"></i>
-                                User orders
+                                Grand Total / Latest orders
                             </div>
                             <div class="card-body">
-                                <canvas id="myBarChart" width="100%" height="40"></canvas>
+                                <canvas id="UserReviewsChart" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
@@ -161,10 +161,10 @@
                         <div class="card">
                             <div class="card-header">
                                 <i class="fas fa-chart-area mr-1"></i>
-                                User spending
+                                Product Ratings
                             </div>
                             <div class="card-body">
-                                <canvas id="myAreaChart" width="100%" height="40"></canvas>
+                                <canvas id="myPieChartReview" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTableOrders" width="100%" cellspacing="0">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
                                     <th>OrderID</th>
@@ -812,7 +812,7 @@
                     <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
-                            <input id="userId" name="username" type="password" class="form-control">
+                            <input id="userId" name="username" type="password" class="form-control" value="{{userData.email}}>
                         </div>
                     </div>
 
@@ -836,7 +836,6 @@
         </div>
     </div>
 </div>
-</div>
 
 <script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -844,9 +843,7 @@
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<!--<script src="/js/Admin/scripts.js"></script>-->
-<script src="/js/Admin/datatables-user.js"></script>
-<script src="/js/Admin/chart-area-user.js"></script>
-<script src="/js/Admin/chart-bar-user.js"></script>
+<script src="/js/User/chart-area-user.js"></script>
+<script src="/js/User/chart-bar-user.js"></script>
 </body>
 </html>
