--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -270,7 +270,7 @@
                                     <div class="col-md-4 mb-3">
                                         <label for="city">City</label>
                                         <input type="text" class="form-control" id="City" name="city"
-                                               placeholder="Stad">
+                                               placeholder="Stad" required>
                                         <div class="invalid-feedback">
                                             Please provide a valid city.
                                         </div>
@@ -285,7 +285,7 @@
                                 </div>
                                 <hr class="mb-4">
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="same-address">
+                                    <input type="checkbox" class="custom-control-input" id="same-address" required>
                                     <label class="custom-control-label" for="same-address">Shipping address is the same
                                         as my billing address</label>
                                 </div>
