--- a/src/main/resources/templates/Frontend/Main/Payment.mustache
+++ b/src/main/resources/templates/Frontend/Main/Payment.mustache
@@ -64,45 +64,45 @@
         </nav>
     
 <div id="layoutSidenav">
-    <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-               <div class="sb-sidenav-menu">
+    <!--<div id="layoutSidenav_nav">-->
+        <!--<nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">-->
+               <!--<div class="sb-sidenav-menu">-->
 
-                <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">
-                </div>
-                <div class="profile-usertitle">
-                    <div class="profile-usertitle-name">
-                        {{userData.firstName}} {{userData.lastName}}
-                    </div>
-                    <div class="profile-userbuttons">
-                    </div>
-                    <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
-                     
-                    </div>
-                    <div class="nav">
-                        <a class="nav-link" href="http://localhost:8888/User">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
-                        </a>
-                        <a class="nav-link" href="http://localhost:8888/User/Checkout/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Cart
-                        </a>
-                        <a class="nav-link" href="http://localhost:8888/User/Purchases">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Purchased images
-                        </a>
-                    </div>
-                </div>
-               <div class="sb-sidenav-footer">
-                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
+                <!--<div class="profile-userpic">-->
+                    <!--<img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">-->
+                <!--</div>-->
+                <!--<div class="profile-usertitle">-->
+                    <!--<div class="profile-usertitle-name">-->
+                        <!--{{userData.firstName}} {{userData.lastName}}-->
+                    <!--</div>-->
+                    <!--<div class="profile-userbuttons">-->
+                    <!--</div>-->
+                    <!--<div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">-->
+                     <!---->
+                    <!--</div>-->
+                    <!--<div class="nav">-->
+                        <!--<a class="nav-link" href="http://localhost:8888/User">-->
+                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                            <!--Dashboard-->
+                        <!--</a>-->
+                        <!--<a class="nav-link" href="http://localhost:8888/User/Checkout/">-->
+                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                            <!--Cart-->
+                        <!--</a>-->
+                        <!--<a class="nav-link" href="http://localhost:8888/User/Purchases">-->
+                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                            <!--Purchased images-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+               <!--<div class="sb-sidenav-footer">-->
+                      <!--<p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>-->
 
-                    </div>
+                    <!--</div>-->
 
-            </div>
-        </nav>
-    </div>
+            <!--</div>-->
+        <!--</nav>-->
+    <!--</div>-->
     <div id="layoutSidenav_content">
 
         <main>
