--- a/src/main/resources/templates/Frontend/Main/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/Main/Checkout.mustache
@@ -243,6 +243,9 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+        a{
+            color:white;
+        }
     </style>
 
 
